Changes to get the unit tests to run in rhino via the trireme project. Trireme wraps rhino and adds nodejs like libraries so that the nodejs-based unit tests can run with no modifications. To run the tests, you have to first do "ant install.trireme" and then "ant test.rhino" or any of the other test targets like "ant test.dynamic.compiled.rhino"
Oh and not all the unit tests pass in rhino, so we'll have to do a few updates.

git-svn-id: svn+ssh://svn.code.sf.net/p/i18nlib/code/trunk@1849 5ac057f5-ce63-4fb3-acd1-ab13b794ca36